fixed media recs, updated glossary

--- a/_posts/2019-09-03-glossary.markdown
+++ b/_posts/2019-09-03-glossary.markdown
@@ -175,16 +175,22 @@ A **plagiopatagium** (“plagio” means “flat”) is a membrane between a fin
 
 **Megafauna** is a not-very-well-defined term that usually refers to any animals human-sized or larger.
 
-### Prehistoric Events
+### Prehistoric Radiation and Extinction Events
+**The Great Oxidation Event** was an extinction event that ended the Archean Eon and kicked off the Proterozoic.  During the Archean (4 to 2.5 billion years ago), life consisted of many types of chemosynthetic prokaryotes (simple single-celled organisms), including some photosynthesizers that produced oxygen.  During the Great Oxidation Event, the photosynthesizers exponentially multiplied and took over, creating so much oxygen that many of the anaerobic organisms went extinct, and, due to chemical reactions involving oxygen, creating the first “Snowball Earth” (Huronian glaciation).
+
 **The Cambrian Explosion** was a radiation event that spanned the Cambrian period, 541 to about 516 million years ago, in which all the main types of modern animals quickly appeared.  There are many things that could be considered causes for this, such as the advent of mouths, eyes, predation, burrowing behavior, the end-Ediacaran extinction, etc.
 
 **The Great Ordovician Biodiversification Event** (GOBE) was a radiation event that spanned the Ordovician period, 485 to 444 million years ago, in which the “foundations” of modern phyla laid by the Cambrian explosion were filled in by diverse animal groups.  Different types of marine ecosystems emerged, with different organisms living in, say, reefs than in deep water, and differences in populations depending on location.  This contrasts with the Cambrian, which had basically one type of biome and one biota globally.
 
+**The Carboniferous Rainforest Collapse** (CRC) was a climatic shift and minor extinction event that occurred in the late Carboniferous period (305 million years ago) in which the previously cosmopolitan, wet, dense rainforests that characterized the Carboniferous period gave way to the deserts of the Permian.  This was caused by two major factors: the formation of the supercontinent Pangaea, which, by creating more inland area, made the climate much drier; and the global cooling and glaciation caused by the super low levels of carbon dioxide, due to the rainforests that had been working overtime since the beginning of the Carboniferous but failing to decompose (trees store carbon dioxide when they’re alive, but decomposition releases carbon dioxide back into the atmosphere; in the Carboniferous, trees were so new that nothing had figured out how to digest the tough wood yet).  Together, these two factors swiftly (over just a couple thousand years) ended the reign of amphibians and arthropods, the dominant life-forms of the time, and jump-started the evolutionary trajectory of amniotes (reptiles and mammals), which do better in dry, lower-oxygen conditions.
+
 **The Mesozoic Marine Revolution** (MMR) was a radiation event that spanned the Mesozoic era, 251 to 66 million years ago, in which the ocean environment, niches, and interactions between oceanic animals became a lot more complex.  Predators found ways to crush shells and dig for burrowing animals, which forced the prey to develop spiky, tough shells, toxins, and other defenses to survive.  This was basically Round 2 of the GOBE in terms of new types of ecosystems created and increased niche partitioning and food web complexity.
 
-**The Carnian Pluvial Event** (CPE) was a climatic shift in the early Late Triassic period (230 million years ago) in which the previously dry, mild climate became warm and wet, probably caused by a combination of volcanic activity leading to global warming, and the creation of a new mountain range that cut off winds between ocean and continent, generating monsoons.  This caused numerous extinctions and subsequent radiations, and jump-started the rise of the dinosaurs.
+**The Carnian Pluvial Event** (CPE) was a climatic shift and minor extinction event in the early Late Triassic period (230 million years ago) in which the previously dry, mild climate became warm and wet, probably caused by a combination of volcanic activity leading to global warming, and the creation of a new mountain range that cut off winds between ocean and continent, generating monsoons.  This caused numerous extinctions and subsequent radiations, and jump-started the rise of the dinosaurs.
 
-**The Great American Biotic Interchange** (GABI) was an event that began around 2.7 million years ago in the Pliocene when South America, which had been an island since the Cretaceous, collided with North America, forming the Isthmus of Panama.  This allowed animals to travel from one continent to the other.  Though animals did move both ways, the North American fauna tended to outcompete the South American.  One South American animal that successfully emigrated to North America was Titanis, the last of the terror birds, which ended up as far north as Tennessee.
+**The Cretaceous Terrestrial Revolution** (KTR) was a radiation event in the Late Cretaceous period (125-80 million years ago) in which flowering plants (angiosperms) appeared and quickly took over the world, drastically changing many environments and the animals within them.  Prior to this, there were no grasslands, no true rainforests since the Carboniferous Rainforest Collapse, and few frugivores.  The worldwide domination of angiosperms created these new biomes with new niches for animals to exploit.
+
+**The Great American Biotic Interchange** (GABI) was an event that began around 2.7 million years ago in the Pliocene when South America, which had been an island since the Cretaceous, collided with North America, forming the Isthmus of Panama.  This allowed animals to travel from one continent to the other.  Though animals did move both ways, the North American fauna tended to outcompete the South American.  One famous South American animal that successfully emigrated to North America was Titanis, the last of the terror birds, which ended up as far north as Tennessee.
 
 ### Miscellaneous
 **“Splitters”** are paleontologists who habitually like to create more taxonomic groups.  **“Lumpers”** are paleontologists who like to group other groups together and have less groups.
