--- a/_posts/2020-03-23-marchart.markdown
+++ b/_posts/2020-03-23-marchart.markdown
@@ -41,3 +41,8 @@ Someone told me this looked like a Wiki How illustration.  How to take care of y
 ![scleromochlus](/assets/scleromochlus.gif)
 
 Here's Scleromochlus, the saltatorial ornithodiran from Late Triassic Scotland.  This little nocturnal xerocole is often cited as an early ancestor of pterosaurs.  This gif is actually a digital "remastering" of one of my Inktober drawings from last year.  Boing!
+
+#### Inostrancevia
+![inostrancevia](/assets/inostrancevia.gif)
+
+Inostrancevia was a lion-sized (300 kg) saber-toothed stem-mammal from the Late Permian of what is now Russia.  This was back before synapsids had discovered ear flaps, endothermy, and fur.  (Endothermy and fur would be present in dicynodonts and cynodonts by the end of the Permian; earflaps wouldn't be invented until the middle or end of the Mesozoic.)  Inostrancevia here looks very catlike, but I gave it a gecko-like coloration to try to prevent it from being too mammalian-looking.  Its saber teeth are protected by its jowls.  My friend told me it reminded her of the Cheetos mascot, and now I can't unsee it...
