updated portraits and fuzz

--- a/_posts/2020-04-18-aprilart.markdown
+++ b/_posts/2020-04-18-aprilart.markdown
@@ -7,6 +7,8 @@ categories: blog post
 
 After finishing the Alphabestiary, I've been trying a couple new art formats: bird-inspired portraits, and gesture sheets.  For the former, I start with a photo reference of a suitably primeval-looking bird, and draw a dinosaur in its plumage.  See my post on [archosaur integument](http://obscuredinosaurfacts.com/blog/post/2019/11/16/fuzz.html) for which dinosaurs were likely to have what types of plumage.  For the latter, I sketch four or more varying poses of the same critter in an effort to show more than one aspect or angle of the subject.  Without further ado, here they are!
 
+### Gestures
+
 #### Pakasuchus
 ![pakasuchus](/assets/pakasuchus.png)
 
@@ -16,6 +18,8 @@ Pakasuchus, meaning "cat crocodile," was a notosuchian from late Early Cretaceou
 ![dineobellator](/assets/dineobellator.png)
 
 It's the brand-new velociraptorine from Latest Cretaceous New Mexico, Dineobellator (meaning "Navajo warrior")!  Described just this year, this is just the third end-Cretaceous dromaeosaur known from North America (the other two being Dakotaraptor, described 2015, and Acheroraptor, described 2013.  So we didn't know that ANY dromaeosaurs lived in North America at that time until 2013!)  Here, he's exhibiting four emotional states: angry, casual, excited, and cold.
+
+### Portraits
 
 #### Latenivenatrix
 ![latenivenatrix](/assets/latenivenatrix.png)
@@ -30,7 +34,7 @@ Hesperonychus was a very small (1-2 pound) microraptorine dromaeosaur from Late 
 #### Thescelosaurus
 ![thescelosaurus](/assets/thescelosaurus.jpg)
 
-Thescelosaurus was a large (200-300kg) parksosaurid ornithischian from Latest Cretaceous North America.  It had both teeth toward the back of its snout and a beak on the tip.  This one is dressed up as a wood grouse or capercaillie.
+Thescelosaurus was a large (200-300kg) parksosaurid ornithischian from Latest Cretaceous North America.  It had both teeth toward the back of its snout and a beak on the tip.  This one is dressed up as a wood grouse or capercaillie.  I have been informed that this type of birdlike branching feather is outside the phylogenetic bracket including ornithischians; a more accurate deptiction would give it simple filaments.
 
 #### Siamraptor
 ![siamraptor](/assets/siamraptor.png)
@@ -44,7 +48,51 @@ Usually when I draw scales, I do about 20% of them and then use Procreate's "clo
 
 Here's another bird-inspired portrait: Buitreraptor dressed as a hamerkop (not a shoebill, but a close relative).  Buitreraptor was a small unenlagiine dromaeosaur from Late Cretaceous Argentina.  This is the same group that includes Unenlagia and Austroraptor, who I've drawn before.  They were long-snouted, putative piscivores that populated the Southern Hemisphere toward the end of the Mesozoic.  Here, Buitreraptor rests with its neck retracted and chest feathers puffed up, giving it a compact "aeroshell" look, even though its neck is actually quite long.  Read more about it [here](http://willoughbyart.blogspot.com/2012/07/the-neck-is-lie.html).
 
-#### Just For Fun: Land Before Time But More Accurate
+#### Garudimimus
+![garudimimus](/assets/garudimimus.png)
+
+Garudimimus was an ornithomimosaur from earlyish Late Cretaceous Mongolia.  It was small for an ornithomimosaur, weighing in at 30kg (the size of a small emu), and may have been a basal member of the family including the famous Deinocheirus.  Its name refers to Garuda, a legendary birdlike creature in Hindu mythology.
+
+Unlike the rest of my bird-plumage portraits, this one has a toothless keratinous beak, which means the portrait ended up looking very, very similar to its photo-reference subject, in this case the common crane.  I tried hard to make him look bigger and to get the shape of the beak right.  Did you know that common cranes had tonsures?  I didn't until I started doing this.  It's...not my favorite look.
+
+#### Tsaagan
+![tsaagan](/assets/tsaagan.png)
+
+Tsaagan was a 15-kg velociraptorine dromaeosaur from Late Cretaceous Mongolia.  This one has the plumage of a prairie falcon.
+
+#### Qianzhousaurus
+![qianzhousaurus-portrait](/assets/qianzhousaurus-portrait.png)
+
+I've drawn Qianzhousaurus ("Pinocchio Rex") in the plumage of a roadrunner before, but here's a much more close up view.
+
+#### Thanatotheristes
+![thanatotheristes](/assets/thanatotheristes.png)
+
+Thanatotheristes (meaning "death reaper") was a daspletosaurid tyrannosaur from Late Cretaceous Alberta.  It's a brand-new genus, named just this year, and is known from fragmentary remains, so it might turn out to just be another species of Daspletosaurus.  We'll see.
+
+Daspletosaurus could reach 1.8 to 2 tonnes, which is over the Yutyrannus threshold of 1.4 tonnes.  Since it's hard to make an accurate size estimate from fragments, we don't really know how big Thanatotheristes could get, but it was probably comparable.  That means this super-feathery interpretation is probably fanciful.  The plumage here is based on that of a bearded vulture.
+
+#### Therizinosaurus
+![therizinosaurus](/assets/therizinosaurus.png)
+
+Therizinosaurus was a huge secondarily herbivorous maniraptoran theropod from Late Cretaceous Mongolia.  It had giant arms ending in long, scary claws that it probably used for stripping vegetation like a ground sloth (because of this similarity, artists often give therizinosaurs sloth-like poofy tails).  Therizinosaurus was one of the largest therizinosaurs and could weigh 4-5 tonnes (so please imagine the dark feathering here as being very sparse).  It had both a beak on the front of its snout and teeth farther back.  This one is dressed up like a vulturine guinea fowl.  Unfortunately, it ended up sort of looking like Ronald McDonald...
+
+### Just For Fun
+
+#### Medusaceratops
+![medusaceratops](/assets/medusaceratops.png)
+
+Thought it'd be fun to take part in the Tiktok trend of painting "thermal noods".  With dinosaurs.  And hopefully more thermal accuracy than average.
+
+Medusaceratops was a centrosaurine ceratopsian from Late Cretaceous Montana.  I chose it for this exercise because the generic name is feminine, and it's relatively large (2 tonnes).  My other choice, Avaceratops, weighed only one tonne and I wanted to draw a big girl.
+
+#### Aucasaurus
+![aucasaurus](/assets/aucasaurus.png)
+
+Here we have the abelisaur Aucasaurus, from Late Cretaceous Argentina, dressed up like Tigrex, a monster from the Monster Hunter franchise.  They have similar skull shape and possible keratinous ornamentation, but postcranially, the similarity ends; Tigrex has a sort of beefy pterosaur-type body with wrestler's arms, while Aucasaurus has comically reduced arms and long lanky legs.
+
+#### Land Before Time But More Accurate
+
 I'm surprised that it seems like nobody's done this before.  Land Before Time popularized dinosaurs before Jurassic Park--the first movie came out in 1988--and consistent with the times, its depiction of dinosaurs have quite a few inaccuracies.  The main offense though is their compressing the entire Mesozoic world into one time and location.  Remember, Stegosaurus was more ancient to Tyrannosaurus than Tyrannosaurus is to the iPhone!  So, to start with, I've broken the "gang" into three groups that could have more plausibly lived alongside one another.
 
 ![rubypetrie](/assets/rubypetrie.png)
